[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3" # Needed for WebSocket streams

# Middleware (CORS, Tracing, Static Files)
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

rand = "0.8.5"